2003-12-06  Mark Mitchell  <mark@codesourcery.com>

	PR c++/13323
	* class.c (same_signature_p): Handle conversion operators
	correctly.
	(check_for_override): Likewise.

2003-12-06  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (GXX_CROSS_NAME, CXX_CROSS_NAME): Delete.
	(c++.install_common, cp/g++.1, c++.install-man): Adjust for above.
	(c++.uninstall): Likewise.

2003-12-05  Danny Smith <dannysmith@gcc.gnu.org>
	    Mark Mitchell  <mark@codesourcery.com>

	PR c++/13305
	* parser.c (cp_parser_elaborated_type_specifier): Accept
	attributes.
	
2003-12-05  Mark Mitchell  <mark@codesourcery.com>

	PR c++/13314
	* parser.c (cp_parser_class_specifier): Match push_scope/pop_scope
	calls.
	(cp_parser_class_head): Likewise.

2003-12-05  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/13166
	* parser.c (cp_parser_late_parsing_default_args): Make sure the
	context is a class before calling push_nested_class and
	pop_nested_class.

2003-12-03  James E Wilson  <wilson@specifixinc.com>

	* g++spec.c (lang_specific_driver): Delete USE_LIBUNWIND_EXCEPTIONS
	support.

2003-12-03  Mark Mitchell  <mark@codesourcery.com>

	PR c++/9127
	* cp-tree.h (at_namespace_scope_p): New function.
	* parser.c (cp_parser_class_head): Handle invalid explicit
	specializations.
	* search.c (at_namespace_scope_p): New function.

	PR c++/13179
	* semantics.c (finish_handler_parms): Do not call eh_type_info for
	types used in templates.

	PR c++/10771
	* parser.c (cp_parser_check_for_invalid_template_id): New
	function.
	(cp_parser_simple_type_specifier): Use it.
	(cp_parser_elaborated_type_specifier): Likewise.
	(cp_parser_class_head): Likewise.

2003-12-02  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/10126
	* pt.c (convert_nontype_argument): Handle default conversions
	while converting a pointer to member function.

2003-12-02  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/12573
	* pt.c (value_dependent_expression_p): Handle COMPONENT_REFs by